mobile-spacing-fix

--- a/css/style.css
+++ b/css/style.css
@@ -167,3 +167,7 @@ body {
   height: 100%;
   margin-bottom: 110px;
 }
+
+#my-container {
+  margin-top: 10vh;
+}
